--- a/Handle Litt Firebase/index.html
+++ b/Handle Litt Firebase/index.html
@@ -2470,9 +2470,9 @@
                         currentParsedItems.push({ text: item, category: match.category });
                         learnedVariants[normalized] = { original: match.item, category: match.category };
                     } else {
-                        // No match - add to "Diverse"
-                        recognized.push({ text: item, category: 'Diverse' });
-                        currentParsedItems.push({ text: item, category: 'Diverse' });
+                        // No match - add to unrecognized for admin approval
+                        unrecognized.push(item);
+                        currentParsedItems.push({ text: item, category: null });
                     }
                 }
             });
@@ -2741,8 +2741,8 @@
                     submitItemForApproval(userInput, match.category);
                 }
             } else {
-                // No match at all - add to "Diverse"
-                addItemToList(userInput, 'Diverse');
+                // No match at all - send to admin for approval
+                submitItemForApproval(userInput, 'Ukategorisert');
             }
         }
 
